--- a/index.html
+++ b/index.html
@@ -9,46 +9,48 @@
 </head>
 
 <body>
-    <header>
-        <nav>
-            <h1>Pixer</h1>
-            <ul>
-                <li>
-                    <a href="#">Bosh sahifa</a>
-                </li>
-                <li>
-                    <a href="#">Xizmatlar</a>
-                </li>
-                <li>
-                    <a href="#">Portfolio</a>
-                </li>
-                <li>
-                    <a href="#">Jomoa</a>
-                </li>
-                <li>
-                    <a href="#">Blog</a>
-                </li>
-                <li>
-                    <a href="#">Kontaktlar</a>
-                </li>
+    <div class="container">
 
-            </ul>
-            <div class="btn">
-                <button class="btn">+998930757701</button>
+        <header>
+            <nav>
+                <h1>Pixer</h1>
+                <ul>
+                    <li>
+                        <a href="#">Bosh sahifa</a>
+                    </li>
+                    <li>
+                        <a href="#">Xizmatlar</a>
+                    </li>
+                    <li>
+                        <a href="#">Portfolio</a>
+                    </li>
+                    <li>
+                        <a href="#">Jomoa</a>
+                    </li>
+                    <li>
+                        <a href="#">Blog</a>
+                    </li>
+                    <li>
+                        <a href="#">Kontaktlar</a>
+                    </li>
+
+                </ul>
+                <div class="btn">
+                    <button class="btn">+998930757701</button>
+                </div>
+            </nav>
+        </header>
+        <section class="head">
+            <img class="work" src="https://i.pinimg.com/originals/7d/c1/b5/7dc1b5bbbfd7dc8cfaf6a82ef96c7154.jpg" alt="">
+            <div class="stage">
+                <p class="item item1">Bizni keyingi bosqichga <br> olib chqingg</p>
+                <p class="item "> Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam officia corrupti debitis
+                    nihil sunt maxime, autem quibusdam mollitia!</p>
+
+                <br>
+                <button class="item ">Xizmatlar bilan tanishish</button>
             </div>
-        </nav>
-    </header>
-    <section class="head">
-        <img class="work" src="https://i.pinimg.com/originals/7d/c1/b5/7dc1b5bbbfd7dc8cfaf6a82ef96c7154.jpg" alt="">
-        <div class="stage">
-            <p class="item item1">Bizni keyingi bosqichga <br> olib chqingg</p>
-            <p class="item "> Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam officia corrupti debitis
-                nihil sunt maxime, autem quibusdam mollitia!</p>
-
-            <br>
-            <button class="item ">Xizmatlar bilan tanishish</button>
-        </div>
-    </section>
+        </section>
     </div>
     <section class="xizmatlar">
         <h1 class="xizmatlar__item item_1">Xizmatlar</h1>
@@ -186,6 +188,8 @@
     <section class="black">
 
     </section>
+    </div>
+
 </body>
 
 </html>
